# rsnet

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/superpowers/: localapi-research.md
docs/superpowers/plans/: 2026-03-20-production-ready.md
examples/: hello.rs  hello_tls.rs  service.rs
scripts/: vendor-build.sh
src/: lib.rs
src/glue/: as_c_ptr.rs  error.rs  listener.rs  localapi.rs  mod.rs  server.rs  service.rs  stream.rs  tests.rs  tls.rs  types.rs
