[package]
name = "tsnet"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssl"]
ssl = ["dep:tokio-rustls", "dep:rustls-pemfile"]
localapi-serde-json = ["dep:serde", "dep:serde_json"]

[dependencies]
libc = "0.2"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "io-util"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "hello"

[[example]]
name = "hello_tls"
required-features = ["ssl", "localapi-serde-json"]

[build-dependencies]
bindgen = "0.71.0"
