[package]
name = "rsnet"
version = "0.2.0"
edition = "2021"
description = "Async Rust bindings for Tailscale's libtailscale C library"
license = "MIT"
repository = "https://github.com/wowjeeez/rsnet"
homepage = "https://github.com/wowjeeez/rsnet"
keywords = ["tailscale", "vpn", "networking", "async", "ffi"]
categories = ["network-programming", "api-bindings", "asynchronous"]
readme = "README.md"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "libtailscale/tailscale.h",
    "LICENSE",
    "README.md",
]

[dependencies]
libc = "0.2"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "io-util", "sync"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[[example]]
name = "hello"

[[example]]
name = "hello_tls"

[[example]]
name = "service"

[build-dependencies]
bindgen = "0.71.0"
cc = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
